# my-presentation

./: CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
dev-ledger/: 2026-07-12.jsonl  2026-07-13.jsonl
src/mypresentation/: cli.py  presenter.py
tests/: conftest.py  test_presenter.py
