[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "my-presentation"
version = "0.0.1"
description = "Drafts a slide-by-slide talk outline with speaker notes, hands it to MyTypster to render and compile a deck."
authors = [{ name = "Lorenzo Liuzzo", email = "lorenzoliuzzo@outlook.com" }]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = ["mythings-core", "my-guard"]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.6", "pre-commit>=3"]

[project.scripts]
mypresentation = "mypresentation.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/mypresentation"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
markers = ["slow: integration/slow tests, excluded from the fast local loop"]
